<com.google.android.flexbox.FlexboxLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    app:flexWrap="wrap"
    app:alignContent="flex_start"
    app:alignItems="flex_start"
    tools:context=".MainActivity">
  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/link"
      android:onClick="link"/>
  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/map_link"
      android:onClick="mapLink"/>
  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/map_geo"
      android:onClick="mapGeo"/>
  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/dial"
      android:onClick="dial"/>
  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/gallery"
      android:onClick="gallery"/>
  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/send_text"
      android:onClick="sendText"/>
  <Button
      android:id="@+id/send_image_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/send_image"
      android:onClick="sendImage"/>
  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/send_email"
      android:onClick="sendEmail"/>
  <ImageView
    android:id="@+id/image"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
</com.google.android.flexbox.FlexboxLayout>